lib/bait/tests/inout_error/struct/no_field.in.bt
struct Foo {}

fun bar(arg string){}

f := Foo{}
bar(f.whatever)
